# rust-newsletter

./: .dockerignore  Cargo.toml  Dockerfile  configuration.yaml  spec.yaml
.github/workflows/: general.yml
.sqlx/: query-32f244ca5163f36f136af43b1e1bedbdcd8ae94fb1e9e3437059df4ac9870238.json  query-409cb2c83e34fba77b76f031cb0846a8f2716d775c3748887fb0c50f0e0a565b.json  query-a6125e1d693935473d360e960919d2df8ad447b5c3e6636adb0b6457251fc7a4.json  query-b93775d2038cdb87100e87c0eb9774b67049038c52e61bd18b0419208a9fe242.json  query-e6ad5ca75c1f3f44a615b868c59a48c1ebe358d27dc72cbb203bc6be9855b1fa.json
configuration/: base.yaml  local.yaml  production.yaml
migrations/: 20240530120926_create_subscriptions_table.sql  20240610151708_make_status_not_null_in_subscriptions.sql  20240615095207_rename_password_column.sql  20240622121704_seed_user.sql  20240626081508_create_idempotency_table.sql  20240627134128_create_newsletter_issues_table.sql  20240627144528_create_issue_delivery_queue_table.sql
scripts/: init_db.sh  init_redis.sh  run_pretty_log.sh  test_with_logging.sh
src/: authentication.rs  configuration.rs  email_client.rs  errors.rs  issue_delivery_worker.rs  lib.rs  main.rs  session_state.rs  startup.rs  telemetry.rs  utils.rs
src/authentication/: middleware.rs  mod.rs  password.rs
src/domain/: subscriber_email.rs  subscriber_name.rs
src/idempotency/: key.rs  persistence.rs
src/routes/: health_check.rs  home.rs  mod.rs  newsletters.rs  subscriptions.rs  subscriptions_confirm.rs
src/routes/admin/: dashboard.rs  mod.rs  newsletters.rs
src/routes/admin/newsletters/: get.rs  post.rs
src/routes/admin/password/: get.rs  post.rs
src/routes/login/: mod.rs  post.rs
templates/: home.html  login.html
templates/admin/: dashboard.html  newsletter.html  password.html
tests/: health_check.rs  subscriptions.rs
tests/api/: admin_dashboard.rs  change_password.rs  health_check.rs  helpers.rs  login.rs  newsletters.rs  subscriptions.rs  subscriptions_confirm.rs
tests/common/: mod.rs
