[package]
name = "newsletter"
version = "0.1.0"
edition = "2021"
authors = ["wtchrs <wtchr_@hotmail.com>"]

[lib]
name = "newsletter_lib"
path = "src/lib.rs"

[[bin]]
name = "newsletter"
path = "src/main.rs"

[dependencies]
actix-web = "4"
anyhow = "1"
base64 = "0.22"
chrono = { version = "0.4.38", default-features = false, features = ["clock"] }
claim = "0.5"
config = "0.14"
once_cell = "1"
rand = { version = "0.8", features = ["std_rng"] }
secrecy = { version = "0.8", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde-aux = "4"
sha3 = "0.10"
thiserror = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tracing = { version = "0.1", features = ["log"] }
tracing-actix-web = "0.7"
tracing-bunyan-formatter = "0.3"
tracing-log = "0.2"
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
unicode-segmentation = "1"
uuid = { version = "1", features = ["v4"] }
validator = "0.18"

[dependencies.sqlx]
version = "0.7"
default-features = false
features = [
    "runtime-tokio-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate"
]

[dependencies.reqwest]
version = "0.12"
default-features = false
features = ["json", "rustls-tls"]

[dev-dependencies]
fake = "2"
linkify = "0.10"
quickcheck = "1"
quickcheck_macros = "1"
serde_json = "1"
wiremock = "0.6"
